@@ -19,7 +19,7 @@
  * limitations under the License.
  */
 
-const ee = require( 'event-emitter' );
+const $asyncevent = require( 'futoin-asyncevent' );
 
 const common = require( '../common' );
 const FutoInError = common.FutoInError;
@@ -164,7 +164,8 @@ class WSComms {
     constructor() {
         this.rid = 1;
         this.reqas = {};
-        this.evt = ee();
+        this.evt = {};
+        $asyncevent( this.evt, [ 'open' ] );
         this._waiting_open = false;
     }
 
