@@ -1,6 +1,7 @@
 
 === (next) ===
 CHANGED: upgraded webpack to v4
+FIXED: Browser env WebSockets comm failure without event-emitter
 
 === 1.8.3 (2018-02-17) ===
 CHANGED: Object.prototype is freezed only by SpecTools.secureObjectPrototype()
